[package]
name = "bottle-time-rust"
version = "0.1.0"
authors = ["John Eckhart <jeckhart@hey.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "bottle-time-rust"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1  # Reduce parallel code generation units
#strip = true     # Automatically strip symbols from the binary
panic = "abort"  # Remove panic unwinding code

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
embassy-embedded-hal = { version = "0.3", features = ["defmt"]}
embassy-executor = { version = "0.7", features = ["defmt", "arch-std", "executor-thread"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "generic-queue-8"] }

esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
esp-idf-hal = { version = "0.45", features = ["embassy-sync"] }
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-println = { version = "0.13", features = ["defmt-espflash", "esp32s3", "log", "colors"] }
esp-backtrace = { version = "0.15.0", features = ["defmt", "esp32s3", "colors", "exception-handler"] }

chrono = { version = "0.4.39", default-features = false, features = ["alloc", "clock", "serde"] }

async-io = "2"
#async-io-typed = "3"
async-mutex = "1"
futures-lite = { version = "2.6.0", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["alloc", "chrono_0_4", ] }
tplink-shome-protocol = "0.1.2"

[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]
# esp_idf_tools_install_dir = "global"
# esp_idf_sdkconfig = "sdkconfig"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults", "sdkconfig.defaults.ble"]
# native builder only
# esp_idf_components = ["pthread"]
partition_table = "./partitions_singleapp_large.csv"
# esp_idf_extra_components = ["esp32s3"]